# bevy_pg_nav

./: Cargo.toml  readme.md
assets/: nav_config.toml
src/: bvh.rs  debug.rs  deprecated_debug.rs  functions.rs  lib.rs  navmesh.rs  pathfinding.rs  pgnavmesh.rs  plugin.rs  recast_convert.rs  terrain.rs  tools.rs  triangles.rs  types.rs  water.rs
src/deprecated/: functions.rs  lib.rs  navmesh.rs  plugin.rs  triangles.rs  types.rs
